--- a/src/sound_effects_player.ui
+++ b/src/sound_effects_player.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 
+<!-- Generated with glade 3.22.2 
 
-Copyright (C) 2019 by John Sauter
+Copyright © 2020 by John Sauter
 
 This file is part of sound_effects_player.
 
@@ -37,7 +37,7 @@ Author: John Sauter
     <property name="default_height">600</property>
     <property name="icon_name">applications-multimedia</property>
     <signal name="delete-event" handler="menu_delete_top_window" object="top_box" swapped="no"/>
-    <child>
+    <child type="titlebar">
       <placeholder/>
     </child>
     <child>
@@ -62,11 +62,12 @@ Author: John Sauter
                     <property name="name">activity</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="ellipsize">end</property>
-                    <property name="width_chars">20</property>
+                    <property name="wrap">True</property>
+                    <property name="ellipsize">middle</property>
+                    <property name="width_chars">29</property>
                   </object>
                   <packing>
-                    <property name="expand">True</property>
+                    <property name="expand">False</property>
                     <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
@@ -78,8 +79,8 @@ Author: John Sauter
                     <property name="can_focus">False</property>
                     <property name="orientation">vertical</property>
                     <child>
-                      <object class="GtkLevelBar" id="channel_01">
-                        <property name="name">01</property>
+                      <object class="GtkLevelBar" id="channel_00">
+                        <property name="name">00</property>
                         <property name="height_request">10</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -96,8 +97,8 @@ Author: John Sauter
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLevelBar" id="channel_02">
-                        <property name="name">02</property>
+                      <object class="GtkLevelBar" id="channel_01">
+                        <property name="name">01</property>
                         <property name="height_request">10</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -111,6 +112,102 @@ Author: John Sauter
                         <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLevelBar" id="channel_02">
+                        <property name="name">02</property>
+                        <property name="height_request">10</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_top">1</property>
+                        <property name="margin_bottom">1</property>
+                        <property name="value">0.01</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLevelBar" id="channel_03">
+                        <property name="name">03</property>
+                        <property name="height_request">10</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_top">1</property>
+                        <property name="margin_bottom">1</property>
+                        <property name="value">0.01</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">3</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLevelBar" id="channel_04">
+                        <property name="name">04</property>
+                        <property name="height_request">10</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_top">1</property>
+                        <property name="margin_bottom">1</property>
+                        <property name="value">0.01</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">4</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLevelBar" id="channel_05">
+                        <property name="name">05</property>
+                        <property name="height_request">10</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_top">1</property>
+                        <property name="margin_bottom">1</property>
+                        <property name="value">0.01</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">5</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLevelBar" id="channel_06">
+                        <property name="name">06</property>
+                        <property name="height_request">10</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_top">1</property>
+                        <property name="margin_bottom">1</property>
+                        <property name="value">0.01</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">6</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLevelBar" id="channel_07">
+                        <property name="name">07</property>
+                        <property name="height_request">10</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_top">1</property>
+                        <property name="margin_bottom">1</property>
+                        <property name="value">0.01</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">7</property>
                       </packing>
                     </child>
                   </object>
